--- a/practiceindex.html/index.html
+++ b/practiceindex.html/index.html
@@ -132,7 +132,7 @@
                              URL Shortening <br/>Scissor allows you to shorten URLs of your <br/>business, events. Shorten your URL at scale, <br/>URL redirect
                              <li>
                                 Custom URLs <br/>With Scissor, you can create custom URLs, <br/>with the lenght you want!A solution for socials and businesses
-                              <li> 
+                                <li> 
                                 <p>QR Codes <br>Generate QR codes to your business, events. <br/>Bring your audience and customers to your <br/>doorstep with this scan and go solution. </p> 
 
                                 <p> Data Analytics <br/>Recieve data on the usage of either your<br/> shortened URL, custom URLs or generated QR <br/> codes. Embedded to monitor progress.</p>
@@ -238,17 +238,27 @@
     <!-- first question -->
     <article class="question">
         <div class="question-header">
-            <h2 class="question-header-title">What is a QR code and what can it do?</h2>
+            <p class="question-header-title">What is a QR code and what can it do?</p>
         </div>
     </article>
     <!-- end of single question -->
     <!-- first question -->
     <article class="question">
-        <div class="question-header"
-        <p class="question-header-title"></p>
+        <div class="question-header"></div>
+        <p class="question-header-title">Is there an API available for integrating the URL shortening service into my <br/>own application or website?</p>
+    </div>
     </article>
+    <!-- end of single question -->
+    <!-- first question -->
     </section>
 
+    <section class="optimize">
+        <h1>Revolutionizing Link Optimization</h1>
+        <div class="optimize-btn">
+            <a href="#" class="btn-blue optimize-btn">Get Started</a>
+        </div>
+    </section>
+    
     <section class="sec">
         <div class="prices">
             <p></p>
